# jurix2025

./: .gitignore  README.md  pyproject.toml
config/: COMPAS.yaml  GTD.yaml  admission.yaml  churn.yaml
data/: compas.csv  compas.py
src/: af_cba.py  argumentation.py  case_base.py  evaluate_data.py  evaluation.py  experiment.py  game.py  preference_relation_discovery.py  preprocessing.py  visualisation.py
